exports[`FormSelect component snapshot renders correctly with a single option 1`] = `
<div
  className="wrap">
  <div
    className="label">
    <label
      className="label"
      htmlFor="loremIpsum">
      Lorem Ipsum
    </label>
  </div>
  <div
    className="inputWrap">
    <select
      className="input"
      name="loremIpsum"
      onChange={[Function]}
      value="lorem">
      <option
        value="" />
      <option
        value="lorem">
        Lorem
      </option>
    </select>
  </div>
</div>
`;

exports[`FormSelect component snapshot renders correctly with multiple options 1`] = `
<div
  className="wrap">
  <div
    className="label">
    <label
      className="label"
      htmlFor="loremIpsum">
      Lorem Ipsum
    </label>
  </div>
  <div
    className="inputWrap">
    <select
      className="input"
      name="loremIpsum"
      onChange={[Function]}
      value="dolorSitAmet">
      <option
        value="" />
      <option
        value="lorem">
        Lorem
      </option>
      <option
        value="ipsum">
        Ipsum
      </option>
      <option
        value="dolorSitAmet">
        Dolor Sit Amet
      </option>
    </select>
  </div>
</div>
`;
